# type-level-natural-number-induction

./: type-level-natural-number-induction.cabal
TypeLevel/NaturalNumber/: Induction.hs
