Name:                type-level-natural-number-induction
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcross@phys.washington.edu>
Stability:           Provisional
Synopsis:            Decidable operations on type-level natural numbers.
Description:         
Cabal-version:       >=1.2.3
Build-type:          Simple
Category:	     Type System,Data

Library
    Build-depends:   base >= 3 && < 5,
                     transformers >= 0.2 && < 0.3,
                     type-level-natural-number >= 1.0 && < 1.2
    Exposed-modules: TypeLevel.NaturalNumber.Induction
    Extensions:	     Rank2Types
